Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2923910 by George Bills, drunken monkey, eft, borisson_, robin.ingelbrecht:
  Fixed handling of array-valued Views fulltext filter input.
- #2914478 by borisson_, mpp, drunken monkey, pfrenssen, claudiu.cristea,
  kevin.dutra, SylvainM, jhedstrom, bircher: Added integration with Drush 9.
- #2926733 by drunken monkey, borisson_: Fixed indexing of leading/trailing
  whitespace in fulltext tokens on database backend.
- #2922024 by drunken monkey, borisson_: Fixed Stemmer incorrectly processing
  non-English searches.
- #2931730 by drunken monkey: Adapted tests to changes in drupal_set_message().
- #2929739 by drunken monkey, borisson_: Improved adherence to coding standards.
- #2927748 by mkalkbrenner, mstiem, drunken monkey: Fixed Views field handler
  for multiple processor-defined fields returned by the server.
- #2928944 by drunken monkey: Removed assert() calls with string parameters.
- #2923976 by Martijn Houtman, drunken monkey: Fixed facets with random sorting
  on Database backend.
- #2921582 by chr.fritsch, drunken monkey: Fixed saving of "database_text" form
  field for Database servers.
- #2919884 by samuel.mortenson, borisson_, drunken monkey: Improved performance
  for saving an index's reindexing state.
- #2855254 by dev.patrick, drunken monkey, borisson_: Removed the remaining
  @codingStandardsIgnoreFile directive.
- #2916754 by chr.fritsch, borisson_, drunken monkey: Fixed failure to detect
  whether a view is executed in the current request.
- #2910638 by drunken monkey, borisson_, phillipHG: Fixed handling of
  entity-valued processor properties.
- #2917036 by drunken monkey, borisson_: Fixed illegal return values in
  Database::getAutocompleteSuggestions().
- #2916225 by tilenav, borisson_, drunken monkey: Replaced manual config
  setting with installConfig() in our Kernel tests.
- #2917779 by mkalkbrenner, edurenye, drunken monkey: Fixed fatal errors in
  views on PHP 5.