@@ -3,12 +3,14 @@
 namespace Drupal\Tests\search_api_db\Kernel;
 
 use Drupal\Component\Render\FormattableMarkup;
+use Drupal\Core\Database\Database as CoreDatabase;
 use Drupal\search_api\Entity\Server;
 use Drupal\search_api\Plugin\search_api\data_type\value\TextToken;
 use Drupal\search_api\Plugin\search_api\data_type\value\TextValue;
 use Drupal\search_api\Query\QueryInterface;
 use Drupal\search_api\SearchApiException;
 use Drupal\search_api\Utility\Utility;
+use Drupal\search_api_db\DatabaseCompatibility\GenericDatabase;
 use Drupal\search_api_db\Plugin\search_api\backend\Database;
 use Drupal\search_api_db\Tests\DatabaseTestsTrait;
 use Drupal\Tests\search_api\Kernel\BackendTestBase;
@@ -615,6 +617,60 @@ class BackendTest extends BackendTestBase {
     $index_id = $index_id ?: $this->indexId;
     return \Drupal::keyValue(Database::INDEXES_KEY_VALUE_STORE_ID)
       ->get($index_id);
+  }
+
+  /**
+   * Tests whether a server on a non-default database is handled correctly.
+   */
+  public function testNonDefaultDatabase() {
+    // Clone the primary credentials to a replica connection.
+    // Note this will result in two independent connection objects that happen
+    // to point to the same place.
+    // @see \Drupal\KernelTests\Core\Database\ConnectionTest::testConnectionRouting()
+    $connection_info = CoreDatabase::getConnectionInfo('default');
+    CoreDatabase::addConnectionInfo('default', 'replica', $connection_info['default']);
+
+    $db1 = CoreDatabase::getConnection('default', 'default');
+    $db2 = CoreDatabase::getConnection('replica', 'default');
+
+    // Safety checks copied from the Core test, if these fail something is wrong
+    // with Core.
+    $this->assertNotNull($db1, 'default connection is a real connection object.');
+    $this->assertNotNull($db2, 'replica connection is a real connection object.');
+    $this->assertNotSame($db1, $db2, 'Each target refers to a different connection.');
+
+    // Create backends based on each of the two targets and verify they use the
+    // right connections.
+    $config = [
+      'database' => 'default:default',
+    ];
+    $backend1 = Database::create($this->container, $config, '', []);
+    $config['database'] = 'default:replica';
+    $backend2 = Database::create($this->container, $config, '', []);
+
+    $this->assertSame($db1, $backend1->getDatabase());
+    $this->assertSame($db2, $backend2->getDatabase());
+
+    // Make sure they also use different DBMS compatibility handlers, which also
+    // use the correct database connections.
+    $dbms_comp1 = $backend1->getDbmsCompatibilityHandler();
+    $dbms_comp2 = $backend2->getDbmsCompatibilityHandler();
+    $this->assertNotSame($dbms_comp1, $dbms_comp2);
+    $this->assertSame($db1, $dbms_comp1->getDatabase());
+    $this->assertSame($db2, $dbms_comp2->getDatabase());
+
+    // Finally, make sure the DBMS compatibility handlers also have the correct
+    // classes (meaning we used the correct one and didn't just fall back to the
+    // generic database).
+    $service = $this->container->get('search_api_db.database_compatibility');
+    $database_type = $db1->databaseType();
+    $service_id = "$database_type.search_api_db.database_compatibility";
+    $service2 = $this->container->get($service_id);
+    $this->assertSame($service2, $service);
+    $class = get_class($service);
+    $this->assertNotEquals(GenericDatabase::class, $class);
+    $this->assertSame($dbms_comp1, $service);
+    $this->assertEquals($class, get_class($dbms_comp2));
   }
 
 }
