@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2922874 by drunken monkey, borisson_: Fixed DBMS compatibility handling when
+  a non-default database is used with the Database backend.
 - #2923910 by George Bills, drunken monkey, eft, borisson_, robin.ingelbrecht:
   Fixed handling of array-valued Views fulltext filter input.
 - #2914478 by borisson_, mpp, drunken monkey, pfrenssen, claudiu.cristea,
